--- a/src/main/java/com/example/userservice/Config/persistence.properties
+++ b/src/main/java/com/example/userservice/Config/persistence.properties
@@ -1,3 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/work
 spring.datasource.username=root
 spring.datasource.password=9582146798
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
